anara2303-hello-world/templates/extra-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels: 
    app: anara-memory-demo
  name: anara-memory-demo
spec:
  containers:
  - name: memory-demo-ctr
    image: nginx:latest
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
