anara2303-hello-world/templates/extra-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: anara-memory-demo
  name: fsadykov-memory-demo
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: anara-memory-demo
  type: ClusterIP
